--- a/slides/index.html
+++ b/slides/index.html
@@ -2183,6 +2183,7 @@
             ### Additional resources
 
             * [Istio on OpenShift via Veer Muchandi](https://github.com/VeerMuchandi/istio-on-openshift)
+            * [Envoy resilience examples](http://blog.christianposta.com/microservices/00-microservices-patterns-with-envoy-proxy-series/)
             * [Istio and Kubernetes via Zach Butcher, et. al.](https://github.com/ZackButcher/istio-workshop)
             * [Bookinfo from http://istio.io](https://istio.io/docs/tasks/traffic-management/request-routing.html)
 
