--- a/slides/index.html
+++ b/slides/index.html
@@ -59,6 +59,11 @@
 					</ul>
 				</section>
 
+        <section id="agenda">
+          <h2>Source Code Is Here</h2>
+          <a href="https://github.com/christian-posta/istio-workshop">https://github.com/christian-posta/istio-workshop</a>
+        </section>
+
 				<!--How did we get here------------------------------------------------------------------>
 				<!--<section>-->
 					<section>
