--- a/slides/index.html
+++ b/slides/index.html
@@ -306,7 +306,7 @@
 							<li>L3/4 network filter</li>
 							<li>out of the box L7 filters</li>
 							<li>HTTP 2, including gRPC</li>
-							<li>baked in service discvoery/health checking</li>
+							<li>baked in service discovery/health checking</li>
 							<li>advanced load balancing</li>
 							<li>stats, metrics, tracing</li>
 							<li>dynamic configuration through xDS</li>
