fix ca title slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -1006,7 +1006,7 @@
 
 
         <section>
-          <h3>Istio Observability</h3>
+          <h3>Istio Certificate Authority</h3>
           <img src="images/istioca.png"/>
         </section>
 
