fix image for pilot & crd

--- a/slides/index.html
+++ b/slides/index.html
@@ -1457,7 +1457,7 @@
 						<script type="text/template">
 							### Pilot and CRD
 
-							![Pilot diagram](/images/pilotcrd.png)
+							![Pilot diagram](images/pilotcrd.png)
 
 
 						</script>
