fix image for route rules

--- a/slides/index.html
+++ b/slides/index.html
@@ -2087,7 +2087,7 @@
 					<script type="text/template">
 						### Route rules
 
-						![service model](/images/istio-svc-model.png)
+						![service model](images/istio-svc-model.png)
           </script>
 					<!-- https://istio.io/docs/concepts/traffic-management/rules-configuration.html -->
 				</section>
