Make json valid with closing braces

--- a/slides/index.html
+++ b/slides/index.html
@@ -2242,7 +2242,7 @@
             "regex":true}]},"route":{"cluster":"out.reviews.istio-samples.svc.cluster.local|http|version=v2",
             "timeout":"0s"},"decorator":{"operation":"reviews-test-v2"}},{"match":
             {"prefix":"/"},"route":{"cluster":"out.reviews.istio-samples.svc.cluster.local|http|version=v1",
-            "timeout":"0s"},"decorator":{"operation":"reviews-default"}
+            "timeout":"0s"},"decorator":{"operation":"reviews-default"}}]}
             ```
 
             Note the routing based on Cookie params.
