--- a/slides/index.html
+++ b/slides/index.html
@@ -1055,14 +1055,13 @@
 
         <section data-markdown>
           <script type="text/template">
-            ### Install istio
+            ### Install latest istio
 
-            Custom download script (needed until `0.3.0` is stable) located at `$BASE/istio/installation`:
+
 
             ```
             $  cd istio/install
-            (istio/install)$  ./downloadIstio.sh
-            (istio/install)$  ## kubectl apply -f istio-0.3.0/install/kubernetes/istio.yaml
+            (istio/install)$  curl -L https://git.io/getLatestIstio | sh -
             ```
             Don't actually do the installation yet. We will take a piece-by-piece approach.
 
@@ -1073,7 +1072,7 @@
         <section data-markdown>
           <script type="text/template">
             ### Official istio download
-            You can also take a look at the official<br/> [installation instructions from istio.io](https://istio.io/docs/setup/kubernetes/quick-start.html)
+            You can also take a look at the official<br/> [installation instructions from istio.io](https://istio.io/docs/setup/kubernetes/quick-start.html). Again, DON'T install anything yet. We'll take it piece by piece.
           </script>
         </section>
 
