add the updated istio workshop from jsenon and ryan

--- a/slides/index.html
+++ b/slides/index.html
@@ -2328,7 +2328,8 @@
 
             * [Istio on OpenShift via Veer Muchandi](https://github.com/VeerMuchandi/istio-on-openshift)
             * [Envoy resilience examples](http://blog.christianposta.com/microservices/00-microservices-patterns-with-envoy-proxy-series/)
-            * [Istio and Kubernetes via Zach Butcher, et. al.](https://github.com/ZackButcher/istio-workshop)
+            * [Istio and Kubernetes workshop from KubeCon 2017 via Zach Butcher, et. al.](https://github.com/ZackButcher/istio-workshop)
+						* [Istio and Kubernetes workshop](https://github.com/retroryan/istio-workshop)
             * [Bookinfo from http://istio.io](https://istio.io/docs/tasks/traffic-management/request-routing.html)
 
           </script>
