start adding destination policy details

--- a/slides/index.html
+++ b/slides/index.html
@@ -64,6 +64,12 @@
           <a href="https://github.com/christian-posta/istio-workshop">https://github.com/christian-posta/istio-workshop</a>
         </section>
 
+				<section>
+					<h2>Additional notes</h2>
+					<p>As you go through the slides, look for the downward arrow. This signifies a new section with more slides underneath it. </p>
+					<img src="images/downarrow.png"/>
+				</section>
+
 				<section data-external="slide-sections/section00-how-we-got-here/index.html"> </section>
 
 				<section data-external="slide-sections/section10-meet-envoy/index.html"> </section>
@@ -84,7 +90,8 @@
 
 				<section data-external="slide-sections/section40-hands-on-istio/03-mixer.html"> </section>
 				
-				<section data-external="slide-sections/section40-hands-on-istio/04-putting-it-together.html"></section>
+				<section data-external="slide-sections/section40-hands-on-istio/04-routerules.html"></section>
+				<section data-external="slide-sections/section40-hands-on-istio/05-destpolicy.html"></section>
 
 
 
