--- a/slides/slide-sections/section40-hands-on-istio/index.html
+++ b/slides/slide-sections/section40-hands-on-istio/index.html
@@ -49,7 +49,13 @@
                 <section data-markdown>
                   <script type="text/template">
                     ### Official istio download
-                    You can also take a look at the official<br/> [installation instructions from istio.io](https://istio.io/docs/setup/kubernetes/quick-start.html). Again, DON'T install anything yet. We'll take it piece by piece.
+                    The official installation does NOT include the component files we'll be reviewing. These have been broken out of the official Istio installation for learning purposes.
+
+
+                    You can also take a look at the official
+                    [installation instructions from istio.io](https://istio.io/docs/setup/kubernetes/quick-start.html).
+
+                    Again, DON'T install anything yet. We'll take it piece by piece.
                   </script>
                 </section>
         
